@@ -1,3 +1,8 @@
+/*
+ * @author Feng Li, IUPUI
+ * @date   2017
+ */
+
 #include "adios_adaptor.h"
 
 void insert_into_adios(char * file_path, char *var_name,int timestep, int n, int size_one, double * buf, const char* mode,  MPI_Comm *pcomm){
