@@ -1,9 +1,14 @@
+/*
+ * @author Feng Li, IUPUI
+ * @date   2017
+ */
+
 #include "ds_adaptor.h"
-//#define USE_SAME_LOCK
-#undef USE_SAME_LOCK
+#define USE_SAME_LOCK
+//#undef USE_SAME_LOCK
 
 #define debug_1
-void get_common_buffer(uint8_t transport_minor,int timestep,int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used){
+void get_common_buffer(uint8_t transport_minor,int timestep,int ndim, int bounds[6], int rank, char * var_name, void **p_buffer,size_t elem_size, double *p_time_used){
 
     printf("\n ** prepare to get, ndim = %d\n", ndim);
     // how many number of elements are actually written
@@ -103,7 +108,7 @@ void get_common_buffer(uint8_t transport_minor,int timestep,int ndim, int bounds
     
 }
 
-void put_common_buffer(uint8_t transport_minor, int timestep,int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void  **p_buffer,size_t elem_size, double *p_time_used){
+void put_common_buffer(uint8_t transport_minor, int timestep,int ndim, int bounds[6], int rank,char * var_name, void  **p_buffer,size_t elem_size, double *p_time_used){
 
     printf("\n ** prepare to put, ndim = %d\n", ndim);
     // how many number of elements are actually written
@@ -198,54 +203,3 @@ void put_common_buffer(uint8_t transport_minor, int timestep,int ndim, int bound
     *p_time_used = t2-t1;
     //MPI_Comm_free(&row_comm);
 }
-
-/*
-void get_common_buffer_unblocking(int timestep, int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used){
-
-    printf("\n ** prepare to get, ndim = %d\n", ndim);
-    // how many number of elements are actually written
-    //int num_elems;
-    char msg[STRING_LENGTH];
-    double t1, t2;
-    int ret_get = -1;
-
-    int num_points;
-    
-    uint64_t lb[3] = {0}, ub[3] = {0};
-    lb[0] = bounds[0];
-    lb[1] = bounds[1];
-    lb[2] = bounds[2];
-    //y
-    ub[0] = bounds[3];
-    //x
-    ub[1] = bounds[4];
-    ub[2] = bounds[5];
-
-    num_points = (bounds[3]-bounds[0]+1)*(bounds[4]- bounds[1]+1)*(bounds[5]- bounds[2]+1);
-
-
-#ifdef debug_1
-    printf("lb: (%d, %d  %d), hb(%d, %d, %d), elem_size %zu bytes\n", bounds[0], bounds[1], bounds[2], bounds[3], bounds[4], bounds[5], elem_size);
-#endif
-
-    //dspaces_barrier();
-    sprintf(msg, "bypass the read lock");
-    my_message(msg, rank, LOG_WARNING);
-
-    // read all regions in once
-    t1 = MPI_Wtime();
-    ret_get = dspaces_get(var_name, timestep, elem_size, ndim, lb, ub, *p_buffer);
-    t2 = MPI_Wtime();
-
-    if(ret_get != 0){
-        perror("get err:");
-        printf("get varaible %s err,  error number %d \n", var_name, ret_get);
-    }else{
-        sprintf(msg, "read %d elem from dspaces, each has %zu bytes", num_points, elem_size);
-        my_message(msg, rank, LOG_WARNING);
-    }
-
-    *p_time_used = t2-t1;
-    
-}
-*/
