@@ -161,7 +161,7 @@ int main (int argc, char ** argv)
 
 //#ifdef RAW_DSPACES
         t1 =MPI_Wtime(); 
-        get_common_buffer(transport_minor, timestep,2, bounds,rank, &comm, var_name, (void **)&data, elem_size, &time_comm);
+        get_common_buffer(transport_minor, timestep,2, bounds,rank, var_name, (void **)&data, elem_size, &time_comm);
         t2 =MPI_Wtime(); 
         // all time spent by get_common_buffer
         t_read_1 += t2-t1;
@@ -200,7 +200,6 @@ int main (int argc, char ** argv)
 //#ifdef RAW_DSPACES
     dspaces_finalize();
 //#endif
-    
 
     MPI_Finalize ();
     printf("rank %d: exit\n", rank);
