@@ -29,7 +29,7 @@ PBS_O_HOME=$HOME
 PBS_O_WORKDIR=$(pwd)
 SCRATCH_DIR=/pylon5/cc4s86p/fli5/data_broker_adios/${SLURM_JOBID}
 
-export Transport=NATIVE_STAGING_DIMES
+export MyTransport=NATIVE_STAGING_DIMES
 
 #source ${PBS_O_WORKDIR}/scripts_bridges/common.sh
 source ${PBS_O_WORKDIR}/scripts_bridges/raw_dspaces.sh
