@@ -111,11 +111,11 @@ sleep 5s  # wait server to fill up the conf file
 #Use ibrun to run the MPI job. It will detect the MPI, generate the hostfile
 # and doing the right binding. With no options ibrun will use all cores.
 #export OMP_NUM_THREADS=1
-CMD_PRODUCER="$LAUNCHER -hostfile $HOST_DIR/hostfile-app1 -n $PROCS_PRODUCER TAU_TRACE=1 TRACEDIR=${PRODUCER_TRACE_DIR}  ${BIN_PRODUCER} ${NSTOP} ${FILESIZE2PRODUCE} ${SCRATCH_DIR}"
+CMD_PRODUCER="$LAUNCHER -export -hostfile $HOST_DIR/hostfile-app1 -n $PROCS_PRODUCER TAU_TRACE=1 TRACEDIR=${PRODUCER_TRACE_DIR}  ${BIN_PRODUCER} ${NSTOP} ${FILESIZE2PRODUCE} ${SCRATCH_DIR}"
 $CMD_PRODUCER  &> ${PBS_RESULTDIR}/producer.log &
 echo "producer applciation lauched: $CMD_PRODUCER"
 
-CMD_CONSUMER="$LAUNCHER -hostfile $HOST_DIR/hostfile-app2 -n $PROCS_CONSUMER TAU_TRACE=1 TRACEDIR=${CONSUMER_TRACE_DIR} ${BIN_CONSUMER} ${NSTOP} ${FILESIZE2PRODUCE} ${SCRATCH_DIR} ${PROCS_PRODUCER}"
+CMD_CONSUMER="$LAUNCHER -export -hostfile $HOST_DIR/hostfile-app2 -n $PROCS_CONSUMER TAU_TRACE=1 TRACEDIR=${CONSUMER_TRACE_DIR} ${BIN_CONSUMER} ${NSTOP} ${FILESIZE2PRODUCE} ${SCRATCH_DIR} ${PROCS_PRODUCER}"
 $CMD_CONSUMER  &> ${PBS_RESULTDIR}/consumer.log &
 echo " consumer applciation lauched $CMD_CONSUMER"
 
